--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE.txt
-recursive-include docs Makefile conf.py *.rst
+recursive-include docs Makefile make.bat conf.py *.rst
 recursive-include docs/_static *
 
