--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
-include LICENSE.txt
+include LICENSE.txt README.txt
 recursive-include docs Makefile make.bat conf.py *.rst
 recursive-include docs/_static *
+recursive-include tests *
 
