--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 # Ignore errors about too many/few blank lines, or
 # blank lines at the end of the file
 pep8ignore = E302 E303 W391 E501
-addopts = --cov . --cov-report term-missing --cov-report=html
+addopts = --ignore=setup.py --doctest-modules --cov . --cov-report term-missing --cov-report=html
