--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,16 @@
 [pytest]
-# Ignore errors about too many/few blank lines, or
-# blank lines at the end of the file
-pep8ignore = E302 E303 W391 E501
-#addopts = --ignore=setup.py --doctest-modules
-addopts = --ignore=setup.py --doctest-modules --cov . --cov-report term-missing --cov-report=html
+addopts = -v --ignore=setup.py --doctest-modules
+
+# For text coverage report
+#addopts = -v --ignore=setup.py --doctest-modules --cov csvsee --cov-report=term-missing
+
+# For HTML coverage report
+#addopts = -v --ignore=setup.py --doctest-modules --cov csvsee --cov-report=html
+
+# Stuff to ignore when running py.test --pep8
+# Ignore errors about too many/few blank lines, blank lines at the end of the file,
+# extra whitespace after commas (all of which I deem minor, and sometimes useful)
+pep8ignore =
+  *.py E241 E302 E303 W391 E501
+  docs/conf.py ALL
+
